--- a/menu.html
+++ b/menu.html
@@ -17,6 +17,19 @@
 <!-- Le titre -->
     <section id= titre>
         <h1>PUISSANCE 4</h1>
+        <h2>À la découverte des femmes du numérique</h2>
+    </section>
+
+<!-- Section image + descriptif des femmes -->
+    <section id="images">
+        <div id="adaLovelace">
+            <img src="img/Ada2.png" alt="Illustration d'Ada Lovelace">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+        </div>
+        <div id="hedyLamarr">
+            <img src="img/Hedy2.png" alt="Illustration d'Hedy Lamarr">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
     </section>
 
 <!-- Les boutons -->
